--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,27 @@
     <!-- External Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
 
-    <!-- App CSS -->
+    <!-- Layout CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
     <!-- Nav-Bar CSS -->
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+
+    <!-- New Tweet CSS -->
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
+    <!-- Tweet Display CSS -->
+    <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
+
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+
   </head>
 
   <body>
@@ -32,9 +42,9 @@
     </nav>
 
     <!-- Page-specific (main) content here -->
-    <!-- New Tweet Creator Form -->
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <main class="container">
+
+      <!-- New Tweet Creator Form -->
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form action="/tweets/" method="POST">
@@ -43,6 +53,21 @@
           <span class="counter">140</span>
         </form>
       </section>
+
+      <container id="tweets-container">
+        <article class="tweet">
+          <header>
+            <img class="avatar" src="/images/bird.png" >
+            <text class="username">USERNAME</text>
+            <text class="handle">@HANDLE</text>
+          </header>
+          <p class="tweet-content"> Little tweet here </p>
+          <footer>
+            <text class="date">DATE</text>
+          </footer>
+        </article>
+      </section>
+
     </main>
   </body>
 </html>
