Made tweets auto-scaling for multi-line content

--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,9 @@
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
-
   </head>
 
   <body>
-
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png" >
@@ -54,18 +52,20 @@
         </form>
       </section>
 
-      <container id="tweets-container">
-        <article class="tweet">
+       <container id="tweets-container">
+<!--         <article class="tweet">
           <header>
-            <img class="avatar" src="/images/bird.png" >
+            <img class="avatar" src="/images/bird.png">
             <text class="username">USERNAME</text>
             <text class="handle">@HANDLE</text>
           </header>
-          <p class="tweet-content"> Little tweet here </p>
+          <p class="content"> Little tweet here </p>
           <footer>
-            <text class="date">DATE</text>
+            <text class="created_at">DATE</text>
+            <text class="widgets"> WIDGETS HERE </text>
           </footer>
-        </article>
+          </article> -->
+        </container>
       </section>
 
     </main>
