--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="/scripts/toggleCompose.js"></script>
 
   </head>
 
@@ -37,6 +38,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png" >
       <span class="header">Tweeter</span>
+      <button id="compose-btn">Compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
@@ -45,27 +47,14 @@
       <!-- New Tweet Creator Form -->
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="/tweets/" method="POST">
-          <textarea name="text" placeholder="What are you humming about?"></textarea>
+        <form id="post-tweet" action="/tweets/" method="POST">
+          <textarea id="tweet-text" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
       </section>
 
-       <container id="tweets-container">
-<!--         <article class="tweet">
-          <header>
-            <img class="avatar" src="/images/bird.png">
-            <text class="username">USERNAME</text>
-            <text class="handle">@HANDLE</text>
-          </header>
-          <p class="content"> Little tweet here </p>
-          <footer>
-            <text class="created_at">DATE</text>
-            <text class="widgets"> WIDGETS HERE </text>
-          </footer>
-          </article> -->
-        </container>
+       <container id="tweets-container"></container>
       </section>
 
     </main>
