Changed createTweet to work with _.js templating

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     <!-- Tweet Display CSS -->
     <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
+    <!-- Fonts for the widgets -->
+    <link rel="stylesheet" href="/styles/font-awesome/css/font-awesome.min.css">
+
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -30,13 +33,14 @@
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
     <script type="text/javascript" src="/scripts/toggleCompose.js"></script>
+    <script type="text/javascript" src="/scripts/underscore.js"></script>
 
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" >
+      <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
       <button id="compose-btn">Compose</button>
     </nav>
