--- a/public/index.html
+++ b/public/index.html
@@ -22,18 +22,14 @@
     <!-- Tweet Display CSS -->
     <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
-    <!-- Fonts for the widgets -->
-    <link rel="stylesheet" href="/styles/font-awesome/css/font-awesome.min.css">
-
-
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+    <script type ="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
     <script type="text/javascript" src="/scripts/toggleCompose.js"></script>
-    <script type="text/javascript" src="/scripts/underscore.js"></script>
 
   </head>
 
@@ -59,7 +55,6 @@
       </section>
 
        <container id="tweets-container"></container>
-      </section>
 
     </main>
   </body>
